<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mm.plume.MainActivity">
    <SearchView
        android:id="@+id/sv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_placeholder" />
    <RadioGroup
        android:id="@+id/rg_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/title_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_radio"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/author_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_radio"
            android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
            android:id="@+id/subject_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_radio"
            android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>
    <Button
        android:id="@+id/btn_search"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_btn" />
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</LinearLayout>
